<resources>

    <string name="app_name">缩查就查</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">缩缩缩</string>
    <string name="title_activity_wordlist">WordList</string>
    <string name="title_activity_newword">NewWord</string>
	<string name="title">titel</string>
	<string name="search_button">查询</string>
	<string name="welcome_msg">欢迎你,   </string>
	<string name="confirm">确认</string>
	<string name="back">返回</string>
	<string name="askforname">用户名</string>
	<string name="askforenglish">英文全称</string>
	<string name="askforexp">中文解释</string>
	<string name="username_or_email">用户名或邮箱</string>
    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="password">用户密码</string>
    <string name="user_register">用户注册</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="new_password">新密码</string>
    <string name="new_password_confirm">新密码确认</string>
    <string name="exit">退出</string>
</resources>