<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/suo_bg" >

    <TextView
        android:id="@+id/user_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/user_register"
        android:textSize="13pt" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_register"
        android:layout_marginLeft="20dp"
        android:text="@string/username"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="8"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:layout_marginLeft="20dp"
        android:text="@string/email"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="8"
        android:inputType="textPersonName" >
    </EditText>
    
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_email"
        android:layout_marginLeft="20dp"
        android:text="@string/new_password"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="8"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:id="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_marginLeft="20dp"
        android:text="@string/new_password_confirm"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/editText_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="8"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/back"
         android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/editText_password_confirm"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="8pt" />

    <Button
        android:id="@+id/register"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText_password"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="8pt" />


</RelativeLayout>
