<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/suo_bg" >

    <TextView
        android:id="@+id/user_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/user_login"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login"
        android:layout_marginLeft="20dp"
        android:text="@string/username"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:layout_marginLeft="20dp"
        android:text="@string/password"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textSize="10pt"
        android:gravity="center" />

    <Button
        android:id="@+id/register"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="8pt" />

</RelativeLayout>
