<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/suo_bg" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/englishexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:text="@string/askforenglish"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editText_englishexp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/englishexp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_englishexp"
        android:layout_marginLeft="20dp"
        android:text="@string/askforexp"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editText_userexp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_userexp"
        android:layout_marginLeft="20dp"
        android:text="@string/askforname"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>
    

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText_username"
        android:layout_marginRight="10dp"
        android:text="@string/confirm"
        android:textSize="10pt" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:text="@string/back"
        android:textSize="10pt" />

</RelativeLayout>
